--- a/app/src/main/res/layout/fragment_alertas_almacenes.xml
+++ b/app/src/main/res/layout/fragment_alertas_almacenes.xml
@@ -12,6 +12,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cvAlertasAlmacenes"
         android:layout_width="340dp"
+        app:cardCornerRadius="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:layout_marginStart="35dp"
@@ -37,7 +38,7 @@
                     android:id="@+id/tvCategoryNameAlert"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="70dp"
+                    android:layout_marginHorizontal="95dp"
                     android:layout_marginVertical="10dp"
                     android:text="@string/title_alerts_warehouses"
                     android:textAllCaps="true"
