--- a/app/src/main/res/layout/fragment_anadir_transferencia.xml
+++ b/app/src/main/res/layout/fragment_anadir_transferencia.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/clAnadirTransferencia"
     android:layout_height="match_parent"
     tools:context=".ui.Formularios.añadirAlmacen.añadirTransferencia.AnadirTransferenciaFragment">
 
@@ -222,6 +223,11 @@
                 android:id="@+id/etCodigoDeBarra"
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/color_list"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:hint="@string/placeholder_codigo_de_barra"
                 android:layout_marginStart="100dp"
                 android:textColor="@color/black"/>
 
