--- a/app/src/main/res/layout/fragment_cliente_precio_venta.xml
+++ b/app/src/main/res/layout/fragment_cliente_precio_venta.xml
@@ -1,13 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlPrecioVentaClientes"
+    android:tag="tag_precio_venta_clientes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".ui.Formularios.añadirAlmacen.añadirProducto.ClientePrecioVentaFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvPrecioVentaClientes"
+        android:layout_width="340dp"
+        app:cardCornerRadius="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:layout_marginStart="35dp"
+        android:background="@color/cream">
 
-</FrameLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:background="@color/cream"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvCategoryNamePrecioVenta"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="70dp"
+                    android:layout_marginVertical="10dp"
+                    android:text="@string/title_customers_sell_price"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <ProgressBar
+                    android:id="@+id/progressBarPrecioVenta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvClientes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/bAgregarCliente"
+                        android:layout_width="110dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="5dp"
+                        android:backgroundTint="@color/light_green"
+                        android:text="Agregar" />
+
+                    <Button
+                        android:id="@+id/bPrecioVentaClientesEliminar"
+                        android:layout_width="110dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="5dp"
+                        android:backgroundTint="@color/light_green"
+                        android:text="Eliminar" />
+
+                    <Button
+                        android:id="@+id/bPrecioVentaClientesVolver"
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="5dp"
+                        android:backgroundTint="@color/light_green"
+                        android:text="VOLVER" />
+                </LinearLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </ScrollView>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
+
+
